2005-06-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Fix this to
	use just the domain name for the domain, not the whole
	DOMAIN\username. Based on a patch by Jeroen Hautekeete in #306877.

2005-05-26  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (cleanup_hosts): lock host_lock around
	this, since it can be called from set_property(). Possible fix for
	bnc #81641.

2005-05-05  Dan Winship  <danw@novell.com>

	* docs/reference/Makefile.am (SCANGOBJ_OPTIONS): Use
	--type-init-func to force g_thread_init to be called. [#302674]

2005-04-18  Tor Lillqvist  <tml@novell.com>

	* configure.in: Call AC_LIBTOOL_WIN32_DLL. Check for Win32, set
	Automake conditional OS_WIN32. Pre-cache information that we do
	have getaddrinfo(), getnameinfo(), and IPv6 on Win32. (The tests
	wouldn't notice as they don't include the necessary headers or
	link with -lws2_32. Easiest to just pre-cache it.)

	* libsoup-zip.in: New file, to build zipfile-based distribution of
	libsoup for Win32. 

	* Makefile.am (EXTRA_DIST)
	* configure.in (AC_OUTPUT): Add libsoup-zip(.in).

	* libsoup/Makefile.am: Use -no-undefined on Win32. Link with
	WinSock library -lws2_32.
	
	* libsoup/soup-portability.h: New file. On Unix it includes the
	traditional BSD socket etc headers. On Win32 it includes
	winsock2.h and ws2tcpip.h.

	* libsoup/*.c
	* libsoup/*.h: Correspondingly, don't include the BSD socket API
	headers directly.

	* libsoup/soup-address.h
	* libsoup/soup-dns.h: Include soup-portability.h

	* libsoup/soup-address.c (soup_address_class_init): This function
	should get called before libsoup uses the WinSock API, so this is
	a good place to call WSAStartup().
	
	* libsoup/soup-auth-digest.c (get_protection_space): Use
	g_strsplit() instead of the relatively unportable strtok_r().

	* libsoup/soun-dns.c: Remove unused headers. Implement
	inet_pton() and inet_ntop() on Win32 using WSAStringToAddress()
	and WSAAddressToString().
